testsuite/bsc.interra/messages/EBadModuleInterface/EBadModuleInterface1.bs.bsc-out.expected
checking package dependencies
compiling EBadModuleInterface1.bs
Error: "EBadModuleInterface1.bs", line 26, column 4: (T0048)
  Multiple interfaces
